k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sudoku
  labels:
    app.kubernetes.io/name: sudoku
